[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-B"
version = "0.1.0"
requires-python = ">=3.10"
description = "Example for a shared module 'Repository A'"
dependencies = [
    "numpy",
    "natsort",
    "pandas",
]

[tool.setuptools]
# Use src/ layout and expose the single module "main"
package-dir = {"" = "src"}
py-modules = ["main"]

[dependency-groups]
dev = [
    "tensorboard",
]
