[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-b"
version = "0.1.0"
requires-python = ">=3.10"
description = "Example for a shared module 'Repository B'"
readme = "README.md"
dependencies = [
    "numpy",
    "natsort",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "tensorboard",
]

[tool.setuptools.packages.find]
where = ["src"]
